--- a/LeetCode/381-390/390. 消除游戏（中等）.md
+++ b/LeetCode/381-390/390. 消除游戏（中等）.md
@@ -45,7 +45,7 @@ arr = [6]
 
 与求解约瑟夫环类似，本题也可以通常找规律，分析出公式之后进行递推求解。
 
-对于本题，定义 $f[i]$ 为在 **连续序列** $[1, i]$ 中进行「起始从左到右」的轮流换向间隔删除，最终左边剩余的编号；定义 $f'[i]$ 为在 **连续序列** $[1, i]$ 中进行「起始从右到左」的轮流换向间隔删除，最终左边剩余的编号。
+对于本题，定义 $f[i]$ 为在 **连续序列** $[1, i]$ 中进行「起始从左到右」的轮流换向间隔删除，最终左边剩余的编号；定义 $f'[i]$ 为在 **连续序列** $[1, i]$ 中进行「起始从右到左」的轮流换向间隔删除，最终右边剩余的编号。
 
 **由于「从左往右」和「从右往左」分别为「从左端点发起，间隔删除」和「从右端点发起，间隔删除」，因此整个删除过程在连续序列中 $[1, i]$ 中具有对称性，两者最终剩余的编号在连续序列中也具有对称性。**
 
