--- a/LeetCode/1571-1580/1576. 替换所有的问号（简单）.md
+++ b/LeetCode/1571-1580/1576. 替换所有的问号（简单）.md
@@ -72,7 +72,7 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：会处理 `s` 中的所有字符，若当前字符为 `?` 时，会检查与前后字符的关系，最多会遍历在 $3$ 个字符内找到可替换的字符，复杂度为 $O(n * C)$，其中 $C = 3$ 
+* 时间复杂度：会处理 `s` 中的所有字符，若当前字符为 `?` 时，会检查与前后字符的关系，最多在 $3$ 个字符内找到可替换的字符，复杂度为 $O(n * C)$，其中 $C = 3$ 
 * 空间复杂度：$O(n)$
 
 ---
