--- a/LeetCode/1711-1720/1716. 计算力扣银行的钱]（简单）.md
+++ b/LeetCode/1711-1720/1716. 计算力扣银行的钱]（简单）.md
@@ -72,7 +72,7 @@ class Solution {
 
 ### （优化）模拟
 
-更近一步，每个完整周的起始日金额相比上周起始日金额多 $1$，同时周内每日金额递增 $1$，因此相邻完整周的金额之和也满足「等差」性质，可直接使用「等差数列求和」公式 $O(1)$ 求解完整周部分的金额之和；周后一周（若有）的金额也是同理。
+更进一步，每个完整周的起始日金额相比上周起始日金额多 $1$，同时周内每日金额递增 $1$，因此相邻完整周的金额之和也满足「等差」性质，可直接使用「等差数列求和」公式 $O(1)$ 求解完整周部分的金额之和；最后一周（若有）的金额也是同理。
 
 代码：
 ```Java
