--- a/LeetCode/381-390/382. 链表随机节点（中等）.md
+++ b/LeetCode/381-390/382. 链表随机节点（中等）.md
@@ -50,7 +50,7 @@ solution.getRandom(); // 返回 3
 
 在查询时随机一个下标，并将数组中对应下标内容返回出去。
 
-代码：
+**代码（感谢 [@Benhao](/u/himymben/) 同学提供的其他语言版本）：**
 ```Java
 class Solution {
     List<Integer> list = new ArrayList<>();
@@ -65,6 +65,36 @@ class Solution {
         int idx = random.nextInt(list.size());
         return list.get(idx);
     }
+}
+```
+-
+```Python3
+class Solution:
+
+    def __init__(self, head: Optional[ListNode]):
+        self.nodes = []
+        while head:
+            self.nodes.append(head)
+            head = head.next
+
+    def getRandom(self) -> int:
+        return self.nodes[randint(0, len(self.nodes) - 1)].val
+```
+-
+```Golang
+type Solution struct {
+    Nodes []int
+}
+func Constructor(head *ListNode) Solution {
+    nodes := make([]int, 0)
+    for head != nil {
+        nodes = append(nodes, head.Val)
+        head = head.Next
+    }
+    return Solution{nodes}
+}
+func (this *Solution) GetRandom() int {
+    return this.Nodes[rand.Intn(len(this.Nodes))]
 }
 ```
 * 时间复杂度：令 $n$ 为链表长度，预处理数组的复杂度为 $O(n)$；随机获取某个值的复杂度为 $O(1)$
@@ -101,7 +131,7 @@ $$
 
 因此，在每一次 `getRandom` 时，从前往后处理每个节点，同时记录当前节点的编号，当处理到节点 $k$ 时，在 $[0, k)$ 范围内进行随机，若随机到结果为 $0$（发生概率为 $\frac{1}{k}$），则将节点 $k$ 的值存入答案，最后一次覆盖答案的节点即为本次抽样结果。
 
-代码：
+**代码（感谢 [@Benhao](/u/himymben/) 同学提供的其他语言版本）：**
 ```Java
 class Solution {
     ListNode head;
@@ -118,6 +148,39 @@ class Solution {
         }
         return ans;
     }
+}
+```
+-
+```Python3
+class Solution:
+
+    def __init__(self, head: Optional[ListNode]):
+        self.root = head
+
+    def getRandom(self) -> int:
+        node, ans, i = self.root, None, 0
+        while node:
+            if not randint(0, i):
+                ans = node.val
+            node, i = node.next, i + 1
+        return ans
+```
+-
+```Golang
+type Solution struct {
+    Root *ListNode
+}
+func Constructor(head *ListNode) Solution {
+    return Solution{head}
+}
+func (this *Solution) GetRandom() (ans int) {
+    for node, idx := this.Root, 1;node != nil; idx++ {
+        if rand.Intn(idx) == 0{
+            ans = node.Val
+        }
+        node = node.Next
+    }
+    return
 }
 ```
 * 时间复杂度：令 $n$ 为链表长度，随机获取某个值的复杂度为 $O(n)$
