--- a/LeetCode/1211-1220/1220. 统计元音字母序列的数目（困难）.md
+++ b/LeetCode/1211-1220/1220. 统计元音字母序列的数目（困难）.md
@@ -116,7 +116,8 @@ class Solution {
 }
 ```
 -
-```Python3
+
+```Python
 MOD = int(1e9) + 7
 class Solution:
     def countVowelPermutation(self, n: int) -> int:
@@ -130,6 +131,7 @@ class Solution:
         return (((((f[-1][0] + f[-1][1]) % MOD + f[-1][2]) % MOD + f[-1][3]) % MOD) + f[-1][4]) % MOD
 ```
 -
+
 ```Go
 const MOD int = 1e9 + 7
 func countVowelPermutation(n int) int {
@@ -363,7 +365,7 @@ class Solution {
 }
 ```
 -
-```Python3
+```python
 import numpy as np
 MOD = 10 ** 9 + 7
 dtype = np.dtype('uint64')
