--- a/LeetCode/531-540/539. 最小时间差（中等）.md
+++ b/LeetCode/531-540/539. 最小时间差（中等）.md
@@ -154,7 +154,7 @@ int findMinDifference(char ** timePoints, int timePointsSize){
 class Solution {
     public int findMinDifference(List<String> timePoints) {
         int n = timePoints.size();
-        if (n >= 1440) return 0;
+        if (n > 1440) return 0;
         int[] cnts = new int[1440 * 2 + 10];
         for (String s : timePoints) {
             String[] ss = s.split(":");
