--- a/LeetCode/1341-1350/1345. 跳跃游戏 IV（困难）.md
+++ b/LeetCode/1341-1350/1345. 跳跃游戏 IV（困难）.md
@@ -288,30 +288,33 @@ class Solution {
         return -1; // never
     }
     int update(Deque<Integer> d1, Deque<Integer> d2, int[] dist1, int[] dist2) {
-        int t = d1.pollFirst(), step = dist1[t];
-        if (t + 1 < n) {
-            if (dist2[t + 1] != INF) return step + 1 + dist2[t + 1];
-            if (dist1[t + 1] == INF) {
-                d1.addLast(t + 1);
-                dist1[t + 1] = step + 1;
+        int m = d1.size();
+        while (m-- > 0) {
+            int t = d1.pollFirst(), step = dist1[t];
+            if (t + 1 < n) {
+                if (dist2[t + 1] != INF) return step + 1 + dist2[t + 1];
+                if (dist1[t + 1] == INF) {
+                    d1.addLast(t + 1);
+                    dist1[t + 1] = step + 1;
+                }
             }
-        }
-        if (t - 1 >= 0) {
-            if (dist2[t - 1] != INF) return step + 1 + dist2[t - 1];
-            if (dist1[t - 1] == INF) {
-                d1.addLast(t - 1);
-                dist1[t - 1] = step + 1;
+            if (t - 1 >= 0) {
+                if (dist2[t - 1] != INF) return step + 1 + dist2[t - 1];
+                if (dist1[t - 1] == INF) {
+                    d1.addLast(t - 1);
+                    dist1[t - 1] = step + 1;
+                }
             }
-        }
-        List<Integer> list = map.getOrDefault(arr[t], new ArrayList<>());
-        for (int ne : list) {
-            if (dist2[ne] != INF) return step + 1 + dist2[ne];
-            if (dist1[ne] == INF) {
-                d1.addLast(ne);
-                dist1[ne] = step + 1;
+            List<Integer> list = map.getOrDefault(arr[t], new ArrayList<>());
+            for (int ne : list) {
+                if (dist2[ne] != INF) return step + 1 + dist2[ne];
+                if (dist1[ne] == INF) {
+                    d1.addLast(ne);
+                    dist1[ne] = step + 1;
+                }
             }
+            map.remove(arr[t]);
         }
-        map.remove(arr[t]);
         return -1;
     }
 }
