--- a/LeetCode/2051-2060/2059. 转化数字的最小运算数（中等）.md
+++ b/LeetCode/2051-2060/2059. 转化数字的最小运算数（中等）.md
@@ -168,31 +168,34 @@ class Solution {
         return -1;
     }
     int update(Deque<Long> d1, Map<Long, Integer> m1, Deque<Long> d2, Map<Long, Integer> m2, boolean flag) {
-        long cur = d1.pollFirst();
-        int step = m1.get(cur);
-        for (int i : nums) {
-            if (flag) {
-            	// 正向搜索：进行出队检查，只有出队元素符合条件，才能使用出队元素往下拓展
-                if (0 <= cur && cur <= 1000) {
-                    long[] result = new long[]{cur + i, cur - i, cur ^ i};
-                    for (long next : result) {
-                        if (m2.containsKey(next)) return step + 1 + m2.get(next);
-                        if (!m1.containsKey(next)) {
-                            d1.addLast(next);
-                            m1.put(next, step + 1);
+        int m = d1.size();
+        while (m-- > 0) {
+            long cur = d1.pollFirst();
+            int step = m1.get(cur);
+            for (int i : nums) {
+                if (flag) {
+                    // 正向搜索：进行出队检查，只有出队元素符合条件，才能使用出队元素往下拓展
+                    if (0 <= cur && cur <= 1000) {
+                        long[] result = new long[]{cur + i, cur - i, cur ^ i};
+                        for (long next : result) {
+                            if (m2.containsKey(next)) return step + 1 + m2.get(next);
+                            if (!m1.containsKey(next)) {
+                                d1.addLast(next);
+                                m1.put(next, step + 1);
+                            }
                         }
                     }
-                }
-            } else {
-                // 反向搜索：进行入队检查，只有拓展元素符合条件，才能将拓展元素入队
-                long[] result = new long[]{cur + i, cur - i, cur ^ i};
-                for (long next : result) {
-                    if (0 <= next && next <= 1000) {
-                        if (m2.containsKey(next)) return step + 1 + m2.get(next);
-                        if (!m1.containsKey(next)) {
-                            d1.addLast(next);
-                            m1.put(next, step + 1);
-                        }   
+                } else {
+                    // 反向搜索：进行入队检查，只有拓展元素符合条件，才能将拓展元素入队
+                    long[] result = new long[]{cur + i, cur - i, cur ^ i};
+                    for (long next : result) {
+                        if (0 <= next && next <= 1000) {
+                            if (m2.containsKey(next)) return step + 1 + m2.get(next);
+                            if (!m1.containsKey(next)) {
+                                d1.addLast(next);
+                                m1.put(next, step + 1);
+                            }   
+                        }
                     }
                 }
             }
