--- a/LeetCode/811-820/815. 公交路线（困难）.md
+++ b/LeetCode/811-820/815. 公交路线（困难）.md
@@ -212,23 +212,25 @@ class Solution {
         return 0x3f3f3f3f; // never
     }
     int update(Deque<Integer> d, Map<Integer, Integer> cur, Map<Integer, Integer> other) {
-        // 取出当前所在的路线，与进入该路线所花费的距离
-        int poll = d.pollFirst();
-        int step = cur.get(poll);
+        int m = d.size();
+        while (m-- > 0) {
+            // 取出当前所在的路线，与进入该路线所花费的距离
+            int poll = d.pollFirst();
+            int step = cur.get(poll);
 
-        // 遍历该路线所包含的车站
-        for (int station : rs[poll]) {
-            // 遍历将由该线路的车站发起的路线
-            Set<Integer> lines = map.get(station);
-            if (lines == null) continue;
-            for (int nr : lines) {
-                if (cur.containsKey(nr)) continue;
-                if (other.containsKey(nr)) return step + other.get(nr);
-                cur.put(nr, step + 1);
-                d.add(nr);
+            // 遍历该路线所包含的车站
+            for (int station : rs[poll]) {
+                // 遍历将由该线路的车站发起的路线
+                Set<Integer> lines = map.get(station);
+                if (lines == null) continue;
+                for (int nr : lines) {
+                    if (cur.containsKey(nr)) continue;
+                    if (other.containsKey(nr)) return step + other.get(nr);
+                    cur.put(nr, step + 1);
+                    d.add(nr);
+                }
             }
         }
-
         return -1;
     }
 }
