--- a/LeetCode/751-760/752. 打开转盘锁（中等）.md
+++ b/LeetCode/751-760/752. 打开转盘锁（中等）.md
@@ -146,9 +146,9 @@ class Solution {
         Deque<String> d1 = new ArrayDeque<>(), d2 = new ArrayDeque<>();
         /*
          * m1 和 m2 分别记录两个方向出现的状态是经过多少次转换而来
-         * e.g
-         * m1 = {"1000":1} 代表 "1000" 由 s="0000" 替换 1 次字符而来
-         * m2 = {"9999":3} 代表 "9999" 由 t="9996" 替换 3 次字符而来
+         * e.g.
+         * m1 = {"1000":1} 代表 "1000" 由 s="0000" 旋转 1 次而来
+         * m2 = {"9999":3} 代表 "9999" 由 t="9996" 旋转 3 次而来
          */
         Map<String, Integer> m1 = new HashMap<>(), m2 = new HashMap<>();
         d1.addLast(s);
@@ -174,33 +174,36 @@ class Solution {
         return -1;       
     }
     int update(Deque<String> deque, Map<String, Integer> cur, Map<String, Integer> other) {
-        String poll = deque.pollFirst();
-        char[] pcs = poll.toCharArray();
-        int step = cur.get(poll);
-        // 枚举替换哪个字符
-        for (int i = 0; i < 4; i++) {
-            // 能「正向转」也能「反向转」，这里直接枚举偏移量 [-1,1] 然后跳过 0
-            for (int j = -1; j <= 1; j++) {
-                if (j == 0) continue;
+        int m = deque.size();
+        while (m-- > 0) {
+            String poll = deque.pollFirst();
+            char[] pcs = poll.toCharArray();
+            int step = cur.get(poll);
+            // 枚举替换哪个字符
+            for (int i = 0; i < 4; i++) {
+                // 能「正向转」也能「反向转」，这里直接枚举偏移量 [-1,1] 然后跳过 0
+                for (int j = -1; j <= 1; j++) {
+                    if (j == 0) continue;
 
-                // 求得替换字符串 str
-                int origin = pcs[i] - '0';
-                int next = (origin + j) % 10;
-                if (next == -1) next = 9;
+                    // 求得替换字符串 str
+                    int origin = pcs[i] - '0';
+                    int next = (origin + j) % 10;
+                    if (next == -1) next = 9;
 
-                char[] clone = pcs.clone();
-                clone[i] = (char)(next + '0');
-                String str = String.valueOf(clone);
+                    char[] clone = pcs.clone();
+                    clone[i] = (char)(next + '0');
+                    String str = String.valueOf(clone);
 
-                if (set.contains(str)) continue;
-                if (cur.containsKey(str)) continue;
+                    if (set.contains(str)) continue;
+                    if (cur.containsKey(str)) continue;
 
-                // 如果在「另一方向」找到过，说明找到了最短路，否则加入队列
-                if (other.containsKey(str)) { 
-                    return step + 1 + other.get(str);
-                } else {
-                    deque.addLast(str);
-                    cur.put(str, step + 1);
+                    // 如果在「另一方向」找到过，说明找到了最短路，否则加入队列
+                    if (other.containsKey(str)) { 
+                        return step + 1 + other.get(str);
+                    } else {
+                        deque.addLast(str);
+                        cur.put(str, step + 1);
+                    }
                 }
             }
         }
