--- a/LeetCode/751-760/752. 打开转盘锁（中等）.md
+++ b/LeetCode/751-760/752. 打开转盘锁（中等）.md
@@ -113,7 +113,7 @@ while(!d1.isEmpty() && !d2.isEmpty()) {
     }
 }
 
-// update 为从队列 d 中取出一个元素进行「一次完整扩展」的逻辑
+// update 为将当前队列 d 中包含的元素取出，进行「一次完整扩展」的逻辑（按层拓展）
 void update(Deque d, Map cur, Map other) {}
 ```
 
