--- a/LeetCode/481-490/488. 祖玛游戏（困难）.md
+++ b/LeetCode/481-490/488. 祖玛游戏（困难）.md
@@ -99,7 +99,8 @@ class Solution {
     }
     int dfs(String a, int cur) {
         if (a.length() == 0) return 0;
-        if (map.containsKey(a)) return map.get(a);
+        String hashKey = a + "_" + cur;
+        if (map.containsKey(hashKey)) return map.get(hashKey);
         int ans = INF;
         int n = a.length();
         for (int i = 0; i < m; i++) {
@@ -129,7 +130,7 @@ class Solution {
                 ans = Math.min(ans, dfs(sb.toString(), next) + 1);
             }
         }
-        map.put(a, ans);
+        map.put(hashKey, ans);
         return ans;
     }
 }
@@ -167,7 +168,7 @@ class Node {
 **首先，一个合格的 AStar 启发式函数应当能够确保「估值不会小于理论最小距离」。同时由于启发式的估值函数是针对于最终状态进行估算，因此只确保最终状态的第一次出队时为最短路，其余中间状态的首次出队不一定是最短路，为此我们需要使用哈希表来记录中间状态的距离变化，如果某个局面的最短距离被更新，我们应当将其再次入队。**
 
 基于此，我们设计如下的 AStar 的启发式函数：使用哈希表来统计「当前的棋盘 $a$ 的彩球数量」&「当前手上拥有的彩球数量」，对「无解情况」和「理论最小次数」进行分析：
-
+ 
  * 对于某个彩球 $c$ 而言，如果当前棋盘的数量 + 手上的数量 都不足 $3$ 个，那么该局面往下搜索也必然无解，该局面无须入队；
  * 对于某个彩球 $c$ 而言，如果当前棋盘数量少于 $3$ 个，那么至少需要补充至 $3$ 个才能被消除，而缺少的个数则是「从手上彩球放入棋盘内」的次数，即对于彩球 $c$，我们理论上至少需要消耗 $3 - cnt$ 次（$cnt$ 为当前棋盘拥有的彩球 $c$ 的数量）。
 
@@ -212,7 +213,7 @@ class Solution {
         m = b.length();
         PriorityQueue<Node> q = new PriorityQueue<>((o1,o2)->(o1.val+o1.step)-(o2.val+o2.step));
         q.add(new Node(_a, 1 << m, f(_a, 1 << m), 0));
-        map.put(_a, 0);
+        map.put(_a + "_" + (1 << m), 0);
         while (!q.isEmpty()) {
             Node poll = q.poll();
             String a = poll.a;
@@ -246,8 +247,9 @@ class Solution {
                     String nextStr = sb.toString();
                     if (nextStr.length() == 0) return step + 1;
                     if (f(nextStr, next) == INF) continue;
-                    if (!map.containsKey(nextStr) || map.get(nextStr) > step + 1) {
-                        map.put(nextStr, step + 1);
+                    String hashKey = nextStr + "_" + next;
+                    if (!map.containsKey(hashKey) || map.get(hashKey) > step + 1) {
+                        map.put(hashKey, step + 1);
                         q.add(new Node(nextStr, next, f(nextStr, next), step + 1));
                     }
                 }
