--- a/LeetCode/481-490/488. 祖玛游戏（困难）.md
+++ b/LeetCode/481-490/488. 祖玛游戏（困难）.md
@@ -99,7 +99,8 @@ class Solution {
     }
     int dfs(String a, int cur) {
         if (a.length() == 0) return 0;
-        if (map.containsKey(a)) return map.get(a);
+        String hashKey = a + "_" + cur;
+        if (map.containsKey(hashKey)) return map.get(hashKey);
         int ans = INF;
         int n = a.length();
         for (int i = 0; i < m; i++) {
@@ -129,7 +130,7 @@ class Solution {
                 ans = Math.min(ans, dfs(sb.toString(), next) + 1);
             }
         }
-        map.put(a, ans);
+        map.put(hashKey, ans);
         return ans;
     }
 }
@@ -212,7 +213,7 @@ class Solution {
         m = b.length();
         PriorityQueue<Node> q = new PriorityQueue<>((o1,o2)->(o1.val+o1.step)-(o2.val+o2.step));
         q.add(new Node(_a, 1 << m, f(_a, 1 << m), 0));
-        map.put(_a, 0);
+        map.put(_a + "_" + (1 << m), 0);
         while (!q.isEmpty()) {
             Node poll = q.poll();
             String a = poll.a;
@@ -246,8 +247,9 @@ class Solution {
                     String nextStr = sb.toString();
                     if (nextStr.length() == 0) return step + 1;
                     if (f(nextStr, next) == INF) continue;
-                    if (!map.containsKey(nextStr) || map.get(nextStr) > step + 1) {
-                        map.put(nextStr, step + 1);
+                    String hashKey = nextStr + "_" + next;
+                    if (!map.containsKey(hashKey) || map.get(hashKey) > step + 1) {
+                        map.put(hashKey, step + 1);
                         q.add(new Node(nextStr, next, f(nextStr, next), step + 1));
                     }
                 }
