--- a/LeetCode/2031-2040/2034. 股票价格波动（中等）.md
+++ b/LeetCode/2031-2040/2034. 股票价格波动（中等）.md
@@ -64,7 +64,7 @@ stockPrice.minimum();     // 返回 2 ，最低价格时间戳为 4 ，价格为
 * 传入的 `timestamp` 未被记录，直接更新哈希表和 `TreeMap`；
 * 传入的 `timestamp` 已被记录，此时需要先从哈希表取出旧价格 `old`，然后用旧价格对 `TreeMap` 进行修改（如果该价格只有一个时间点，将该价格直接从 `TreeMap` 中移除；若有多个时间点，则对该价格对应的时间点数量进行减一操作），然后再使用传入的新价格 `price` 更新哈希表和 `TreeMap`。
 
-`minimum` 和 `maximum` 操作则只需要取得 `TreeMap` 的首尾 `Key` 即可。
+**`minimum` 和 `maximum` 操作则只需要取得 `TreeMap` 的首尾 `Key` 即可。**
 
 代码：
 ```Java
