--- a/LeetCode/2041-2050/2045. 到达目的地的第二短时间（困难）.md
+++ b/LeetCode/2041-2050/2045. 到达目的地的第二短时间（困难）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[2045. 到达目的地的第二短时间](https://leetcode-cn.com/problems/second-minimum-time-to-reach-destination/solution/gong-shui-san-xie-yi-ti-shuang-jie-dui-y-88np/)** ，难度为 **困难**。
 
-Tag : 「最短路」、「BFS」、「堆优化 Dijkstra」
+Tag : 「最短路」、「BFS」、「堆优化 Dijkstra」、「AStar 算法」、「启发式搜素」
 
 
 
