--- a/LeetCode/1991-2000/1996. 游戏中弱角色的数量（中等）.md
+++ b/LeetCode/1991-2000/1996. 游戏中弱角色的数量（中等）.md
@@ -59,7 +59,7 @@ Tag : 「贪心」
 由于我们统计的是「严格弱角色」，因此在从前往后处理 `ps` 过程中，要将第一维度（攻击力）相同的作为一组进行处理，假设 $[i, j)$ 为第一维度（攻击力）相同的连续段，假设当前处理到连续段 $[i, j)$ 中的第 $k$ 个角色 $ps[k]$，那么 $ps[k]$ 为弱角色的充要条件为：
 
 1. **存在比 $ps[k][0]$ 攻击力高的角色，由于我们先按照了攻击力进行排序，同时又是按照攻击相同为一组进行处理，因此这等价于当前连续段 $[i, j)$ 不是第一组，即 $i \neq 0$；**
-2. **在满足 $1$ 的前提下，存在防御力比 $ps[k][1]$ 高的角色，由于要求弱角色为「严格」，因此我们只能在之前的组（攻击力比 $ps[k][0]$ 小的相同连续段）去找。这意味着我们在遍历过程中需要贪心地维护一个防御力的最大值 $\max$，并在处理完相同连续段后尝试对其进行更新。**
+2. **在满足 $1$ 的前提下，存在防御力比 $ps[k][1]$ 高的角色，由于要求弱角色为「严格」，因此我们只能在之前的组（攻击力比 $ps[k][0]$ 大的相同连续段）去找。这意味着我们在遍历过程中需要贪心地维护一个防御力的最大值 $\max$，并在处理完相同连续段后尝试对其进行更新。**
 
 代码：
 ```Java
